Misalignment of album artworks fixed

--- a/webui/css/views/ArtistsView.css
+++ b/webui/css/views/ArtistsView.css
@@ -1,6 +1,6 @@
 /*
  * MusicDB,  a music manager with web-bases UI that focus on music.
- * Copyright (C) 2017-2020  Ralf Stemmer <ralf.stemmer@gmx.net>
+ * Copyright (C) 2017-2021  Ralf Stemmer <ralf.stemmer@gmx.net>
  * 
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -59,7 +59,6 @@
 {
     flex-basis:         100%;
     width:              0;      /* To align to album entries */
-    margin:             0 0.3em;
 
     overflow:           hidden;
     white-space:        nowrap;
